force-app/main/default/objects/Calculation_Trace__c/Calculation_Trace__c.object-meta.xml
<CustomObject>
    <description>Step-by-step trace of a compensation calculation for transparency and auditability.</description>
    <label>Calculation Trace</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Calculation Trace Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculation Traces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>