force-app/main/default/objects/Calculation_Trace__c/fields/After_Amount__c.field-meta.xml
<CustomField>
    <fullName>After_Amount__c</fullName>
    <label>After Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>