force-app/main/default/objects/Calculation_Trace__c/fields/Before_Amount__c.field-meta.xml
<CustomField>
    <fullName>Before_Amount__c</fullName>
    <label>Before Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>