force-app/main/default/objects/Calculation_Trace__c/fields/Calculation_Description__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Description__c</fullName>
    <label>Calculation Description</label>
    <type>LongTextArea</type>
    <length>500</length>
</CustomField>