force-app/main/default/objects/Calculation_Trace__c/fields/Comp_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Comp_Calculation__c</fullName>
    <label>Comp Calculation</label>
    <referenceTo>Comp_Calculation__c</referenceTo>
    <relationshipLabel>Calculation Traces</relationshipLabel>
    <relationshipName>Calculation_Traces</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>