force-app/main/default/objects/Calculation_Trace__c/fields/Input_Description__c.field-meta.xml
<CustomField>
    <fullName>Input_Description__c</fullName>
    <label>Input Description</label>
    <type>LongTextArea</type>
    <length>500</length>
</CustomField>