force-app/main/default/objects/Calculation_Trace__c/fields/Is_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Is_Reduction__c</fullName>
    <label>Is Reduction</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>