force-app/main/default/objects/Calculation_Trace__c/fields/Output_Amount__c.field-meta.xml
<CustomField>
    <fullName>Output_Amount__c</fullName>
    <label>Output Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>