force-app/main/default/objects/Calculation_Trace__c/fields/Rule_Applied__c.field-meta.xml
<CustomField>
    <fullName>Rule_Applied__c</fullName>
    <label>Rule Applied</label>
    <type>Text</type>
    <length>200</length>
</CustomField>