force-app/main/default/objects/Calculation_Trace__c/fields/Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Step_Number__c</fullName>
    <label>Step Number</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>